@@ -19,25 +19,29 @@ public class PrintAllSubSequences
 
         int i = 0;
         int n = nums.length;
+        List<List<Integer>> subSequences = new ArrayList<>();
 
-        generateSubSequence(nums, i, subSequence);
+        generateSubSequence(nums, i, subSequence, subSequences);
+
+        System.out.println(subSequences);
     }
 
-    private static void generateSubSequence(int[] nums, int i, List<Integer> subSequence)
+    private static void generateSubSequence(int[] nums, int i, List<Integer> subSequence, List<List<Integer>> subSequences)
     {
         if(i >= nums.length)
         {
-            System.out.println(subSequence);
+            //System.out.println(subSequence);
+            subSequences.add(new ArrayList<>(subSequence));
             return;
         }
 
         subSequence.add(nums[i]);
 
-        generateSubSequence(nums, i + 1, subSequence);
+        generateSubSequence(nums, i + 1, subSequence, subSequences);
 
-        //subSequence.remove(subSequence.size() - 1);
-        subSequence.removeLast();
+        subSequence.remove(subSequence.size() - 1);
+        //subSequence.removeLast();
 
-        generateSubSequence(nums, i + 1, subSequence);
+        generateSubSequence(nums, i + 1, subSequence, subSequences);
     }
 }
